[package]
name = "fsh"
version = "0.1.0"
authors = ["m.amin.rayej <m.amin.rayej@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
description = "A simple shell"
repository = "https://github.com/maminrayej/rudac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
regex = "1.3.9"
ctrlc = "3.1.6"